incluindo layouts e strings que faltavam

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,13 @@
     <string name="despesa">Despesa</string>
     <string name="total">Total</string>
 
+    <string name="lista_transacoes_adiciona" />
+    <string name="altera_receita">Altera receita</string>
+    <string name="altera_despesa">Altera despesa</string>
+    <string name="valor">Valor</string>
+    <string name="data">Data</string>
+    <string name="categoria">Categoria</string>
+    <string name="mes">Mês</string>
+    <string name="ano">Ano</string>
+
 </resources>
